# notekeeper

./: CLAUDE.md  README.md  TAGS.example.md  pyproject.toml
.github/workflows/: ci.yml
src/notekeeper/: cli.py  notes.py  vocabulary.py
tests/: test_notes.py
